--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "mongoose": "^5.7.8",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.11.0"
   },
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node src/server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
